feat(subscriptions): updating htm,ts

--- a/src/app/Restock/monitoring/restaurant-sales/components/sale-confirmation/sale-confirmation.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/sale-confirmation/sale-confirmation.component.html
@@ -4,7 +4,8 @@
             <mat-icon>close</mat-icon>
         </button>
 
-        <p class="title">Sale Registered Successfully</p>
+        <p class="title">{{'sales_restaurant.sale_confirmation.title' |
+            translate}}</p>
         <mat-icon class="check">check_circle</mat-icon>
     </div>
 </div>
