--- a/src/app/Restock/monitoring/restaurant-sales/components/sale-detail/sale-detail.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/sale-detail/sale-detail.component.html
@@ -10,15 +10,16 @@
         </button>
 
         <!-- Title -->
-        <h2 class="title">SALE DETAIL "{{sale.code}}".</h2>
+        <h2 class="title">{{'sales_restaurant.sale_details.title' | translate}} "{{sale.code}}".</h2>
 
         <div class="content">
             <!-- Scrollable content area -->
             <p class="sub-text">
-                Number of dishes: {{ sale.recipeCount || 0 }}
+                {{'sales_restaurant.sale_details.number_dishes' | translate}}: {{ sale.recipeCount || 0 }}
             </p>
             <p class="sub-text">
-                quantity of additional supplies: {{ sale.additionalSupplyCount || 0 }}
+                {{'sales_restaurant.sale_details.number_additional_supplies' | translate}}: {{
+                sale.additionalSupplyCount || 0 }}
             </p>
 
             <mat-divider></mat-divider>
@@ -26,24 +27,27 @@
 
             <!-- Dishes table -->
             <div class="dishes">
-                <h3>Dishes</h3>
+                <h3>{{'sales_restaurant.sale_details.dishes' | translate}}</h3>
                 <mat-table [dataSource]="dishes" class="mat-elevation-z2">
 
                     <!-- Dish name column -->
                     <ng-container matColumnDef="name">
-                        <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.name' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
                     </ng-container>
 
                     <!-- Dish price column -->
                     <ng-container matColumnDef="price">
-                        <mat-header-cell *matHeaderCellDef>Unit Price</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.unit_price' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">S/ {{ element.unitPrice }}</mat-cell>
                     </ng-container>
 
                     <!-- Dish quantity column-->
                     <ng-container matColumnDef="quantity">
-                        <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.quantity' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{ element.quantity }}</mat-cell>
                     </ng-container>
 
@@ -54,25 +58,28 @@
 
             <!-- additional supplies table -->
             <div class="additionalSupplies">
-                <h3>Additional supplies</h3>
+                <h3>{{'sales_restaurant.sale_details.additional_supplies' | translate}}</h3>
                 <mat-table [dataSource]="additionalSupplies" class="mat-elevation-z2">
 
                     <!-- Supply name column -->
                     <ng-container matColumnDef="name">
-                        <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.name' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{ element.name }}</mat-cell>
                     </ng-container>
 
                     <!-- Supply price column -->
                     <ng-container matColumnDef="price">
-                        <mat-header-cell *matHeaderCellDef>Unit Price</mat-header-cell>
-                        <mat-cell *matCellDef="let element">S/ {{ element.price }}</mat-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.unit_price' |
+                            translate}}</mat-header-cell>
+                        <mat-cell *matCellDef="let element">S/ {{ element.unitPrice }}</mat-cell>
                     </ng-container>
 
                     <!-- Supply quantity column with editable input -->
                     <ng-container matColumnDef="quantity">
-                        <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
-                        <mat-cell *matCellDef="let element">S/ {{ element.quantity }}</mat-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sale_details.quantity' |
+                            translate}}</mat-header-cell>
+                        <mat-cell *matCellDef="let element">{{ element.quantity }}</mat-cell>
                     </ng-container>
 
                     <mat-header-row *matHeaderRowDef="displayedColumnsInsumos"></mat-header-row>
