--- a/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
@@ -5,12 +5,12 @@
         </button>
 
         <div>
-            <h2 class="title">REGISTERED SALES NOT DISCOUNTED IN INVENTORY</h2>
-            <p class="sub-text">Select the sales you want to deduct the supplies used from the inventory</p>
+            <h2 class="title">{{'sales_restaurant.sales_not_added_in_inventory.title' | translate}}</h2>
+            <p class="sub-text">{{'sales_restaurant.sales_not_added_in_inventory.subtitle' | translate}}</p>
             <mat-checkbox class="select-all" [checked]="isAllSelected()"
                 [indeterminate]="selectedSales.length > 0 && !isAllSelected()"
                 (change)="toggleAllSelection($event.checked)">
-                Select All
+                {{'sales_restaurant.sales_not_added_in_inventory.selectAll' | translate}}
             </mat-checkbox>
         </div>
 
@@ -22,22 +22,30 @@
                 <!-- Tabla de platos -->
                 <mat-table [dataSource]="dataSource" class="mat-elevation-z2">
                     <ng-container matColumnDef="code">
-                        <mat-header-cell *matHeaderCellDef>Code</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sales_not_added_in_inventory.code' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{element.code}}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="quantity_plates">
-                        <mat-header-cell *matHeaderCellDef>Quantity of dishes</mat-header-cell>
+                        <mat-header-cell
+                            *matHeaderCellDef>{{'sales_restaurant.sales_not_added_in_inventory.quantityDishes' |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{element.recipeCount}}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="quantity_additonal_supplies">
-                        <mat-header-cell *matHeaderCellDef>Quantity of additonal supplies</mat-header-cell>
+                        <mat-header-cell
+                            *matHeaderCellDef>{{'sales_restaurant.sales_not_added_in_inventory.quantityAdditionalSupplies'
+                            |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">{{element.additionalSupplyCount}}</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
-                        <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                        <mat-header-cell *matHeaderCellDef>{{'sales_restaurant.sales_not_added_in_inventory.actions'
+                            |
+                            translate}}</mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             <mat-icon (click)="openSaleDetail(element)">description</mat-icon>
                             <mat-checkbox (change)="toggleSelection(element, $event.checked)"
