--- a/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
@@ -1,9 +1,9 @@
 <div class="ventas-container">
     <div class="ventas-header">
-        <h2>Register your sales</h2>
+        <h2>{{'sales_restaurant.register_sale' | translate}}</h2>
         <button mat-raised-button color="primary" class="nueva-venta-btn" (click)="openRegisterSaleModal()">
             <span class="btn-content">
-                NEW SALE
+                {{'sales_restaurant.new_sale' | translate}}
                 <mat-icon>control_point</mat-icon>
             </span>
         </button>
@@ -11,10 +11,10 @@
 
     <mat-divider></mat-divider>
 
-    <p class="text-question">Want to update your inventory? Select the sales you want here:</p>
+    <p class="text-question">{{'sales_restaurant.update_inventory' | translate}}</p>
     <button mat-raised-button class="registered-sales-btn" (click)="openSalesNotAddedToInventoryModal()">
         <span class="btn-content">
-            REGISTERED SALES NOT DISCOUNTED IN INVENTORY
+            {{'sales_restaurant.registered_sales_not_discounted' | translate}}
             <mat-icon>view_list</mat-icon>
         </span>
     </button>
@@ -31,14 +31,14 @@
     <div *ngIf="showHistorySalesAddedInInventory == true">
         <div class="flex-title-history-sales">
             <mat-icon>history</mat-icon>
-            <p>History of sales updated in inventory</p>
+            <p>{{'sales_restaurant.history_sales' | translate}}</p>
         </div>
 
-        <p class="subtitle">Registered sales that have already deducted supplies from inventory</p>
+        <p class="subtitle">{{'sales_restaurant.registered_sales' | translate}}</p>
 
         <!-- Search filter for sales -->
         <mat-form-field appearance="outline" class="filter-field">
-            <mat-label>Search for sale by code</mat-label>
+            <mat-label>{{'sales_restaurant.search' | translate}}</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="E.g., Punto Limon" />
         </mat-form-field>
 
@@ -48,25 +48,26 @@
 
                 <!-- Sale code column -->
                 <ng-container matColumnDef="code">
-                    <th mat-header-cell *matHeaderCellDef> Code </th>
+                    <th mat-header-cell *matHeaderCellDef>{{'sales_restaurant.code' | translate}} </th>
                     <td mat-cell *matCellDef="let row"> {{ row.code }} </td>
                 </ng-container>
 
                 <!-- Number of plates column -->
                 <ng-container matColumnDef="plates">
-                    <th mat-header-cell *matHeaderCellDef> Quantity of dishes </th>
+                    <th mat-header-cell *matHeaderCellDef>{{'sales_restaurant.quantity_dishes' | translate}} </th>
                     <td mat-cell *matCellDef="let row"> {{ row.recipeCount }} </td>
                 </ng-container>
 
                 <!-- Additional supplies column -->
                 <ng-container matColumnDef="additonal_supplies">
-                    <th mat-header-cell *matHeaderCellDef> Quantity of additional supplies </th>
+                    <th mat-header-cell *matHeaderCellDef>{{'sales_restaurant.quantity_additional_supplies' |
+                        translate}}</th>
                     <td mat-cell *matCellDef="let row"> {{ row.additionalSupplyCount }} </td>
                 </ng-container>
 
                 <!-- Actions column -->
                 <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef> Actions </th>
+                    <th mat-header-cell *matHeaderCellDef> {{'sales_restaurant.actions' | translate}} </th>
                     <td mat-cell *matCellDef="let row" (click)="openSaleDetail(row)">
                         <mat-icon>description</mat-icon>
                     </td>
