--- a/src/app/Restock/subscription/pages/subscription-overview/subscription-overview.component.html
+++ b/src/app/Restock/subscription/pages/subscription-overview/subscription-overview.component.html
@@ -1,8 +1,8 @@
 <div class="plans-container">
 
     <div class="plans-header">
-        <h2>FLEXIBLE PLANS TO TAKE YOUR RESTAURANT MANAGEMENT</h2>
-        <h3>TO THE NEXT LEVEL</h3>
+        <h2>{{'subscription.title1' | translate}}</h2>
+        <h3>{{'subscription.title2' | translate}}</h3>
     </div>
 
     <!-- compoente subscription-cards -->
