fix(orders-to-suppliers): fix orders details email and orders select by batches without supplies

--- a/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
@@ -135,7 +135,7 @@
                       | translate
                   }}:</strong
                 >
-                {{ providerProfile.companyAddress }}
+                {{ providerProfile.business_address}}
               </p>
             </div>
           </div>
