--- a/src/app/Restock/profiles/components/personal-data-settings/personal-data-settings.component.html
+++ b/src/app/Restock/profiles/components/personal-data-settings/personal-data-settings.component.html
@@ -7,46 +7,46 @@
         <!-- Name -->
         <mat-label>Name</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.name" type="text" placeholder="Enter your name" aria-label="Name" />
+          <input matInput [value]="profile.name"  [(ngModel)]="localProfile.name" type="text" placeholder="Enter your name" aria-label="Name" />
         </mat-form-field>
 
         <!-- Last name -->
         <mat-label>Last Name</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.last_name" type="text" placeholder="Enter your last name"
+          <input matInput [value]="profile.last_name" [(ngModel)]="localProfile.last_name" type="text" placeholder="Enter your last name"
             aria-label="Last Name" />
         </mat-form-field>
 
-        
+
         <mat-label>Email</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.email" type="email" placeholder="Enter your email" aria-label="Email" />
+          <input matInput [value]="profile.email" [(ngModel)]="localProfile.email" type="email" placeholder="Enter your email" aria-label="Email" />
         </mat-form-field>
 
         <!-- Phone -->
         <mat-label>Phone</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.phone" type="text" placeholder="Enter your phone" aria-label="Phone" />
+          <input matInput [value]="profile.phone" [(ngModel)]="localProfile.phone" type="text" placeholder="Enter your phone" aria-label="Phone" />
         </mat-form-field>
 
         <!-- Address -->
         <mat-label>Address</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.address" type="text" placeholder="Enter your address"
+          <input matInput [value]="profile.address" [(ngModel)]="localProfile.address" type="text" placeholder="Enter your address"
             aria-label="Address" />
         </mat-form-field>
 
         <!-- Country -->
         <mat-label>Country</mat-label>
         <mat-form-field class="full-width" appearance="outline">
-          <input matInput [(ngModel)]="profile.country" type="text" placeholder="Enter your country"
+          <input matInput [value]="profile.country" [(ngModel)]="localProfile.country" type="text" placeholder="Enter your country"
             aria-label="Country" />
         </mat-form-field>
       </div>
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-raised-button class="save-changes-button" aria-label="Save changes" (click)="saveChanges()">SAVE
+      <button mat-raised-button class="save-changes-button" aria-label="Save changes" (click)="onSaveChanges()">SAVE
         CHANGES</button>
     </mat-card-actions>
   </mat-card>
