--- a/src/app/Restock/profiles/components/profile-details/profile-details.component.html
+++ b/src/app/Restock/profiles/components/profile-details/profile-details.component.html
@@ -4,39 +4,39 @@
       <mat-card-title class="text">Profile Details</mat-card-title>
     </mat-card-header>
 
-    <img mat-card-image [src]="profile[0].avatar" alt="User photo" class="profile-photo" />
+    <img mat-card-image [src]="profile.avatar" alt="User photo" class="profile-photo" />
 
     <mat-card-content class="text">
       <div class="personal-details-form">
-        <h4 class="name">{{ profile[0].name }} {{ profile[0].last_name }}</h4>
+        <h4 class="name">{{ profile.name }} {{ profile.last_name }}</h4>
 
         <p class="info"><mat-icon>person</mat-icon> {{ profile.email }}</p>
 
         <!-- Phone -->
-        <p class="info"><mat-icon>phone</mat-icon> {{ profile[0].phone }}</p>
+        <p class="info"><mat-icon>phone</mat-icon> {{ profile.phone }}</p>
 
         <!-- Address -->
-        <p class="info"><mat-icon>location_on</mat-icon> {{ profile[0].address }} - {{ profile.country }} </p>
+        <p class="info"><mat-icon>location_on</mat-icon> {{ profile.address }} - {{ profile.country }} </p>
 
         <hr>
 
         <!-- Company Name -->
         <h5 class="subtitle">Company Name:</h5>
-        <p> {{ profile[0].business_name }} </p>
+        <p> {{ profile.business?.name }} </p>
 
         <!-- Company Address -->
         <h5 class="subtitle">Company Address:</h5>
-        <p> {{ profile[0].business_address }} </p>
+        <p> {{ profile.business?.address }} </p>
 
-        <!-- <h5 class="subtitle">Categories:</h5>
+        <h5 class="subtitle">Categories:</h5>
 
         <div class="category-chip-list">
-          @for (category of profile.companyCategories; track category) {
+          @for (category of categories; track category) {
           <mat-chip color="primary" disabled>
             {{ category }}
           </mat-chip>
           }
-        </div> -->
+        </div>
 
       </div>
     </mat-card-content>
