--- a/src/app/Restock/profiles/components/profile-details/profile-details.component.html
+++ b/src/app/Restock/profiles/components/profile-details/profile-details.component.html
@@ -1,7 +1,7 @@
 <div class="profile-details-container">
   <mat-card class="profile-details-card">
     <mat-card-header>
-      <mat-card-title class="text">Profile Details</mat-card-title>
+      <mat-card-title class="text">{{ 'profile.title' | translate }}</mat-card-title>
     </mat-card-header>
 
     <img mat-card-image [src]="profile.avatar" alt="User photo" class="profile-photo" />
@@ -21,14 +21,22 @@
         <hr>
 
         <!-- Company Name -->
-        <h5 class="subtitle">Company Name:</h5>
+        <h5 class="subtitle">{{ 'profile.business-name' | translate }}:</h5>
         <p> {{ profile.business?.name }} </p>
 
         <!-- Company Address -->
-        <h5 class="subtitle">Company Address:</h5>
+        <h5 class="subtitle">{{ 'profile.business-address' | translate }}:</h5>
         <p> {{ profile.business?.address }} </p>
 
-        <h5 class="subtitle">Categories:</h5>
+        <!-- Company Phone -->
+        <h5 class="subtitle">{{ 'profile.business-phone' | translate }}:</h5>
+        <p> {{ profile.business?.phone }} </p>
+
+        <!-- Company Email -->
+        <h5 class="subtitle">{{ 'profile.business-email' | translate }}:</h5>
+        <p> {{ profile.business?.email }} </p>
+
+        <h5 class="subtitle">{{ 'profile.categories' | translate }}:</h5>
 
         <div class="category-chip-list">
           @for (category of categories; track category) {
