--- a/src/app/Restock/profiles/components/profile-settings/profile-settings.component.html
+++ b/src/app/Restock/profiles/components/profile-settings/profile-settings.component.html
@@ -1,18 +1,18 @@
 <div class="profile-settings-container">
   <mat-card class="profile-settings-card">
     <mat-card-header>
-      <mat-card-title>Edit your information</mat-card-title>
+      <mat-card-title>{{ 'profile.settings.title' | translate}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-tab-group>
-        <mat-tab label="Personal Data" >
+        <mat-tab [label]="'profile.settings.personal-info' | translate " >
           <app-personal-data-settings
             [profile]="profile"
             (profileUpdated)="onSaveChanges($event)"
           />
         </mat-tab>
 
-        <mat-tab label="Business Data">
+        <mat-tab [label]="'profile.settings.business-info' | translate ">
           <app-business-data-settings
             [business]="profile.business!"
             [currentCategories]="categories"
@@ -21,7 +21,7 @@
           />
         </mat-tab>
 
-        <mat-tab label="Security and Privacy">
+        <mat-tab [label]="'profile.settings.security-info' | translate ">
           <app-security-settings
             [user]="profile.user!"
             (profileAndUserUpdated)="onProfileAndUserChanges($event)"
