--- a/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/approved-orders/approved-orders.component.html
@@ -6,27 +6,25 @@
       <div icon>
         <mat-icon style="color: #bcbcbc;">local_shipping</mat-icon>
       </div>
-      You currently have not orders approved.
+      {{ 'supplier-orders.empty.accepted-orders' | translate }}
     </app-empty-section>
   } @else {
     <app-filter-section
-      [title]="'My Orders'"
+      [title]="'supplier-orders.title' | translate"
       [searchQuery]="searchTerm"
       [selectedDateRange]="dateRange"
-      [searchPlaceholder]="'Search orders...'"
       [sortOrder]="currentSortOrder"
-      [sortLabel]="'Order Date'"
       (searchQueryChange)="onSearchChange($event)"
       (selectedDateRangeChange)="onDateRangeChange($event)"
       (toggleSort)="onToggleSort()">
       <!-- Custom filters  -->
       <div slot="filters">
         <mat-form-field appearance="outline">
-          <mat-label>Status</mat-label>
+          <mat-label>{{ 'supplier-orders.state.title' | translate }}</mat-label>
           <mat-select [(value)]="selectedState">
-            <mat-option [value]="1">On Hold</mat-option>
-            <mat-option [value]="2">Preparing</mat-option>
-            <mat-option [value]="3">On the way</mat-option>
+            <mat-option [value]="1">{{ 'supplier-orders.state.on-hold' | translate }}</mat-option>
+            <mat-option [value]="2">{{ 'supplier-orders.state.preparing' | translate }}</mat-option>
+            <mat-option [value]="3">{{ 'supplier-orders.state.on-the-way' | translate }}</mat-option>
           </mat-select>
 
           <button
@@ -48,25 +46,25 @@
 
       <!-- Order Date -->
       <ng-container matColumnDef="orderDate">
-        <th mat-header-cell *matHeaderCellDef> Order Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.date' | translate }}</th>
         <td mat-cell *matCellDef="let order"> {{ order.date | date }} </td>
       </ng-container>
 
       <!-- State -->
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef> State </th>
+        <th mat-header-cell *matHeaderCellDef>  {{ 'supplier-orders.state.title' | translate }} </th>
         <td mat-cell *matCellDef="let order"> {{ order.state.name }} </td>
       </ng-container>
 
       <!-- Ship Date -->
       <ng-container matColumnDef="shipDate">
-        <th mat-header-cell *matHeaderCellDef> Ship Date </th>
+        <th mat-header-cell *matHeaderCellDef>  {{ 'supplier-orders.table.ship-date' | translate }} </th>
         <td mat-cell *matCellDef="let order"> {{ order.estimated_ship_date | date}} </td>
       </ng-container>
 
       <!-- Restaurant Name -->
       <ng-container matColumnDef="restaurantName">
-        <th mat-header-cell *matHeaderCellDef> Restaurant Name </th>
+        <th mat-header-cell *matHeaderCellDef>  {{ 'supplier-orders.table.restaurant-name' | translate }}  </th>
         <td mat-cell *matCellDef="let order">
           {{ adminRestaurantsProfiles[order.id] }}
         </td>
@@ -74,7 +72,7 @@
 
       <!-- Requested Products -->
       <ng-container matColumnDef="requestedProducts">
-        <th mat-header-cell *matHeaderCellDef> N° Requested Products </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.requested-products' | translate }}</th>
         <td mat-cell *matCellDef="let order">
           {{ order.requested_products_count }}
         </td>
@@ -82,13 +80,13 @@
 
       <!-- Final Price -->
       <ng-container matColumnDef="finalPrice">
-        <th mat-header-cell *matHeaderCellDef> Final Price </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.final-price' | translate }}</th>
         <td mat-cell *matCellDef="let order"> {{ order.total_price | currency:'S/':'symbol':'1.2-2' }} </td>
       </ng-container>
 
       <!-- Actions -->
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.actions' | translate }} </th>
         <td mat-cell *matCellDef="let order">
           <button mat-icon-button  (click)="openOrderDetails(order)" class="open-modal-btn" >
             <mat-icon>menu_book</mat-icon>
