--- a/src/app/Restock/monitoring/suppliers-orders/components/manage-new-orders/manage-new-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/manage-new-orders/manage-new-orders.component.html
@@ -7,12 +7,12 @@
     <div *ngIf="step === 1" class="step-content">
 
       <div class="section-subtitle">
-        <p> <span class="subtitle">Restaurant name:</span> {{ adminRestaurantName }} </p>
+        <p> <span class="subtitle">{{ 'supplier-orders.restaurant-name' | translate }}:</span> {{ adminRestaurantName }} </p>
       </div>
 
       <div class="section-header">
-        <h4 class="subtitle">Supplies</h4>
-        <p class="section-description">Select the supplies you have available for the order.</p>
+        <h4 class="subtitle">{{ 'supplier-orders.supplies.title' | translate }}</h4>
+        <p class="section-description">{{ 'supplier-orders.supplies.description' | translate }}</p>
       </div>
 
 
@@ -21,19 +21,19 @@
 
           <!-- Product Name Column -->
           <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef>Product Name</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'supplier-orders.supplies.headers.product-name' | translate }}</th>
             <td mat-cell *matCellDef="let batchOrdered">{{ batchOrdered.batch.supply.name }}</td>
           </ng-container>
 
           <!-- Quantity Column -->
           <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef>Quantity</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'supplier-orders.supplies.headers.quantity' | translate }}</th>
             <td mat-cell *matCellDef="let batchOrdered">{{ batchOrdered.quantity }}</td>
           </ng-container>
 
           <!-- Unit Measure Column -->
           <ng-container matColumnDef="unitMeasure">
-            <th mat-header-cell *matHeaderCellDef>Unit Measure</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'supplier-orders.supplies.headers.unit-measure' | translate }}</th>
             <td mat-cell *matCellDef="let batchOrdered">{{ batchOrdered.batch.supply.unit_measurement.name }}</td>
           </ng-container>
 
@@ -72,13 +72,13 @@
       </div>
 
       <div class="total-price">
-        <strong>Total Price: ${{ order?.total_price | number:'1.2-2' }}</strong>
+        <strong>{{ 'supplier-orders.supplies.total-price' | translate }}: ${{ order?.total_price | number:'1.2-2' }}</strong>
       </div>
 
       <!-- Description -->
       <div class="description-section">
         <mat-form-field appearance="outline" class="description-field">
-          <mat-label>Order Description</mat-label>
+          <mat-label>{{ 'supplier-orders.description' | translate }}</mat-label>
           <textarea
             matInput
             [(ngModel)]="localOrder.description"
@@ -93,30 +93,30 @@
     <div *ngIf="step === 2" class="step-content">
 
       <div class="date-time-section">
-        <h3 class="subtitle">Estimated Shipping Date</h3>
+        <h3 class="subtitle">{{ 'supplier-orders.estimated-ship-date' | translate }}</h3>
         <div class="date-section">
           <mat-form-field appearance="outline">
-            <mat-label>Estimated Shipping Date</mat-label>
+            <mat-label>{{ 'supplier-orders.estimated-ship-date' | translate }}</mat-label>
             <input
               matInput
               [matDatepicker]="picker"
               [(ngModel)]="localOrder.estimatedShipDate"
-              placeholder="Select date"
+              [placeholder]="'supplier-orders.placeholder.select-date' | translate"
               aria-label="Estimated Shipping Date">
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </div>
 
-        <h3 class="subtitle">Estimated Shipping Time</h3>
+        <h3 class="subtitle">{{ 'supplier-orders.estimated-ship-time' | translate }}</h3>
         <div class="time-section">
           <mat-form-field appearance="outline">
-            <mat-label>Estimated Shipping Time</mat-label>
+            <mat-label>{{ 'supplier-orders.estimated-ship-time' | translate }}</mat-label>
             <input
               matInput
               type="time"
               [(ngModel)]="localOrder.estimatedShipTime"
-              placeholder="Select time">
+              [placeholder]="'supplier-orders.placeholder.select-time' | translate">
           </mat-form-field>
         </div>
       </div>
@@ -124,7 +124,7 @@
       @if(this.selection.selected.length > 0)
       {
         <div class="summary-section">
-          <h3 class="subtitle">Order Summary</h3>
+          <h3 class="subtitle">{{ 'supplier-orders.manage-new-orders.order-summary' | translate}}</h3>
           <ul class="summary-list-bullets">
             <li *ngFor="let supplyId of selection.selected" class="summary-item">
               {{ productName(supplyId) }}
@@ -132,7 +132,7 @@
           </ul>
 
           <div class="calculated-total">
-            <h3 class="subtitle"><strong>Selected Items Total: ${{ calculateNewTotalPrice() | number:'1.2-2' }}</strong> </h3>
+            <h3 class="subtitle"><strong>{{ 'supplier-orders.manage-new-orders.new-total' | translate}}: ${{ calculateNewTotalPrice() | number:'1.2-2' }}</strong> </h3>
           </div>
         </div>
       }
@@ -149,14 +149,14 @@
         (click)="prevStep()"
         class="btn-back">
         <mat-icon>arrow_back</mat-icon>
-        Back
+        {{'supplier-orders.manage-new-orders.buttons.back' | translate}}
       </button>
 
       <button
         mat-button
         (click)="closeDialog()"
         class="btn-close">
-        Close
+        {{'supplier-orders.manage-new-orders.buttons.close' | translate}}
       </button>
     </div>
 
@@ -167,7 +167,7 @@
         color="primary"
         (click)="nextStep()"
         class="btn-next">
-        Next
+        {{'supplier-orders.manage-new-orders.buttons.next' | translate}}
         <mat-icon>arrow_forward</mat-icon>
       </button>
 
@@ -178,7 +178,7 @@
         (click)="onAcceptSelection()"
         class="btn-accept">
         <mat-icon>check</mat-icon>
-        Accept Selection
+        {{'supplier-orders.manage-new-orders.buttons.submit-order' | translate}}
       </button>
     </div>
   </mat-dialog-actions>
