--- a/src/app/Restock/monitoring/suppliers-orders/components/new-orders/new-orders.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/new-orders/new-orders.component.html
@@ -7,16 +7,14 @@
         <div icon>
           <mat-icon style="color: #bcbcbc;">local_shipping</mat-icon>
         </div>
-        You currently have not orders received.
+        {{ 'supplier-orders.empty.new-orders' | translate }}
       </app-empty-section>
     } @else {
       <app-filter-section
-        [title]="'My Orders'"
+        [title]="'supplier-orders.title' | translate"
         [searchQuery]="searchTerm"
         [selectedDateRange]="dateRange"
-        [searchPlaceholder]="'Search orders...'"
         [sortOrder]="currentSortOrder"
-        [sortLabel]="'Order Date'"
         (searchQueryChange)="onSearchChange($event)"
         (selectedDateRangeChange)="onDateRangeChange($event)"
         (toggleSort)="onToggleSort()">
@@ -26,13 +24,13 @@
 
         <!-- Order Date -->
         <ng-container matColumnDef="orderDate">
-          <th mat-header-cell *matHeaderCellDef> Order Date </th>
+          <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.date' | translate }} </th>
           <td mat-cell *matCellDef="let order"> {{ order.date | date }} </td>
         </ng-container>
 
         <!-- Restaurant Name -->
         <ng-container matColumnDef="restaurantName">
-          <th mat-header-cell *matHeaderCellDef> Restaurant Name </th>
+          <th mat-header-cell *matHeaderCellDef>{{ 'supplier-orders.table.restaurant-name' | translate }}</th>
           <td mat-cell *matCellDef="let order">
             {{ adminRestaurantsProfiles[order.id] }}
           </td>
@@ -40,7 +38,7 @@
 
         <!-- Requested Products -->
         <ng-container matColumnDef="requestedProducts">
-          <th mat-header-cell *matHeaderCellDef> N° Requested Products </th>
+          <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.requested-products' | translate }}</th>
           <td mat-cell *matCellDef="let order">
             {{ order.requested_products_count }}
           </td>
@@ -48,13 +46,13 @@
 
         <!-- Final Price -->
         <ng-container matColumnDef="finalPrice">
-          <th mat-header-cell *matHeaderCellDef> Final Price </th>
+          <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.final-price' | translate }} </th>
           <td mat-cell *matCellDef="let order"> {{ order.total_price | currency:'S/':'symbol':'1.2-2' }} </td>
         </ng-container>
 
         <!-- Actions -->
         <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <th mat-header-cell *matHeaderCellDef> {{ 'supplier-orders.table.actions' | translate }}  </th>
           <td mat-cell *matCellDef="let order">
             <button mat-icon-button  (click)="openOrderDetails(order)" class="open-modal-btn" >
               <mat-icon>menu_book</mat-icon>
