--- a/src/app/Restock/monitoring/suppliers-orders/components/order-details/order-details.component.html
+++ b/src/app/Restock/monitoring/suppliers-orders/components/order-details/order-details.component.html
@@ -7,8 +7,8 @@
       <div *ngIf="step === 1">
 
         <div class="section-header">
-          <h4 class="subtitle">Supplies</h4>
-          <p class="section-description">View the supplies you have available for the order.</p>
+          <h4 class="subtitle">{{ 'supplier-orders.supplies.title' | translate }}</h4>
+          <p class="section-description">{{ 'supplier-orders.supplies.description' | translate }}</p>
         </div>
 
         <div class="table-container">
@@ -16,7 +16,7 @@
 
             <!-- Product Name Column -->
             <ng-container matColumnDef="productName">
-              <th mat-header-cell *matHeaderCellDef>Product Name</th>
+              <th mat-header-cell *matHeaderCellDef>{{'supplier-orders.supplies.headers.product-name' | translate}}</th>
               <td mat-cell *matCellDef="let orderBatch">
                 {{ productName(orderBatch.batch.supply.id) }}
               </td>
@@ -24,7 +24,7 @@
 
             <!-- Quantity Column -->
             <ng-container matColumnDef="quantity">
-              <th mat-header-cell *matHeaderCellDef>Quantity</th>
+              <th mat-header-cell *matHeaderCellDef>{{'supplier-orders.supplies.headers.quantity' | translate}}</th>
               <td mat-cell *matCellDef="let orderBatch">
                 {{ orderBatch.quantity }}
               </td>
@@ -32,7 +32,7 @@
 
             <!-- Unit Measure Column -->
             <ng-container matColumnDef="unitMeasure">
-              <th mat-header-cell *matHeaderCellDef>Unit Measure</th>
+              <th mat-header-cell *matHeaderCellDef>{{'supplier-orders.supplies.headers.quantity' | translate}}</th>
               <td mat-cell *matCellDef="let orderBatch">
                 {{ orderBatch.batch.supply.unit_measurement.name }}
               </td>
@@ -52,13 +52,13 @@
         </div>
 
         <div class="total-price">
-          <strong>Total Price: ${{ this.order?.total_price }}</strong>
+          <strong>{{'supplier-orders.supplies.total-price' | translate}}: ${{ this.order?.total_price }}</strong>
         </div>
         @if(!hideState)
         {
           <!-- State Stepper -->
           <div class="state-dragger">
-            <h4 class="subtitle">State</h4>
+            <h4 class="subtitle">{{ 'supplier-orders.state.title' | translate }}</h4>
 
             <div class="stepper-container">
               <!-- Progress Line -->
@@ -97,7 +97,7 @@
       <!-- Step 2: Summary -->
       <div *ngIf="step === 2">
         <div class="restaurant-section">
-          <p class="subtitle">Restaurant Name:</p>
+          <p class="subtitle">{{ 'supplier-orders.restaurant-name' | translate }}:</p>
           <p class="value">{{ adminRestaurantName }}</p>
         </div>
 
@@ -106,20 +106,20 @@
           <!-- Situation Chip -->
           <div class="situation">
             <h4 class="subtitle">
-              Situation
+              {{ 'supplier-orders.situation.title' | translate }}
               <mat-chip class="situation-chip">{{ order?.situation?.name || 'Unknown' }}</mat-chip>
             </h4>
           </div>
         }
         @else {
           <div class="date-section">
-            <p class="subtitle">Estimated Ship Date and Time:</p>
+            <p class="subtitle">{{ 'supplier-orders.details.estimated-date' | translate}}:</p>
             <p class="value">{{ this.order?.estimated_ship_date | date }}, {{ this.order?.estimated_ship_time | date:'shortTime'}}</p>
           </div>
         }
 
         <div class="description-section">
-          <p class="subtitle">Order Description</p>
+          <p class="subtitle">{{ 'supplier-orders.description' | translate }}</p>
           <p class="value">{{ this.order?.description }}</p>
         </div>
       </div>
@@ -129,16 +129,16 @@
     <div class="modal-footer">
       <div class="footer-left">
         <button *ngIf="step === 2" mat-button class="btn-back" (click)="prevStep()">
-          Back
+          {{'supplier-orders.details.buttons.back' | translate}}
         </button>
         <button mat-button class="btn-close" (click)="onClose()">
-          Close
+          {{ 'supplier-orders.details.buttons.close' | translate }}
         </button>
       </div>
 
       <div class="footer-right">
         <button *ngIf="step === 1" mat-raised-button color="primary" (click)="nextStep()">
-          Next
+          {{ 'supplier-orders.details.buttons.next' | translate }}
         </button>
       </div>
     </div>
