feat(restaurant-summary): implement notifications logic to widget.

--- a/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
@@ -1,14 +1,14 @@
 <div class="restaurant-summary-grid"> <!-- Row 1: Pending Orders + Last Alerts -->
   <div class="row-1">
-    <div class="widget-pending-orders"> <!-- Próximamente: componente de pending orders -->
-      <app-restaurant-pending-orders-widget/>
+    <div class="widget-pending-orders">
+      <app-restaurant-pending-orders-widget></app-restaurant-pending-orders-widget>
     </div>
-    <div class="widget-last-alerts"> <!-- Próximamente: componente de last alerts -->
-        <app-restaurant-notifications-widget></app-restaurant-notifications-widget>
+    <div class="widget-last-alerts">
+        <app-restaurant-alerts-widget></app-restaurant-alerts-widget>
     </div>
   </div> <!-- Row 2: Carrusel de Clientes Frecuentes -->
   <div class="row-2">
-    <div class="widget-carousel"> <!-- Próximamente: componente de carrusel -->
+    <div class="widget-carousel">
       <app-restaurant-last-supplies-widget/>
     </div>
   </div>
