--- a/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.css
+++ b/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.css
@@ -7,20 +7,47 @@
 
 .widget-container {
   background: #fff;
-  padding: 10px 30px 10px 30px;
+  padding: 10px 30px;
   box-shadow: 1px 0 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  min-height: 310px;
+}
+
+mat-tab-group {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0; /* IMPORTANTE para que funcione el scroll interno */
+}
+
+.mat-tab-body-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+}
+
+.mat-tab-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.scroll-wrapper {
+  flex: 1;
+  overflow-y: auto;
 }
 
 mat-table {
   background-color: #fff;
   border-collapse: collapse;
+  width: 100%;
 }
-.scroll-wrapper {
-  max-height: 270px; /* ajusta según tus necesidades */
-  overflow-y: auto;
-}
+
 mat-header-cell, mat-cell {
   padding: 12px;
   font-size: 14px;
@@ -62,16 +89,17 @@ button.max-stock {
   width: 100%;
 }
 
-@media (max-width: 1190px){
+@media (max-width: 1190px) {
   button.max-stock,
   button.low-stock {
     width: 75%;
   }
 }
-@media (max-width: 600px){
+
+@media (max-width: 600px) {
   button.max-stock,
   button.low-stock {
 
-  width: 75%;
+    width: 75%;
   }
 }
