feat(supplier-summary): implement notilogic to widget.

--- a/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.css
+++ b/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.css
@@ -18,7 +18,7 @@
 }
 
 /* Widgets */
-.widget-alerts {
+.widget-notifications {
   flex: 2;
 }
 
@@ -40,7 +40,7 @@
     align-items: center;
   }
 
-  .widget-alerts,
+  .widget-notifications,
   .widget-account,
   .widget-frequent {
     width: 100% !important;
