--- a/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.html
@@ -2,8 +2,8 @@
 
   <!-- Fila 1: Alerts + Account -->
   <div class="row1">
-    <div class="widget-alerts">
-      <app-supplier-alerts-widget />
+    <div class="widget-notifications">
+      <app-supplier-notifications-widget />
     </div>
     <div class="widget-account">
       <app-supplier-account-widget />
