feat(supplier-summary): comment datepicker and chart.

--- a/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.html
+++ b/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.html
@@ -21,13 +21,13 @@
             </mat-select>
           </mat-form-field>
 
-          <!-- Botón calendario Angular Material -->
-          <div style="display: flex; justify-content: flex-end;">
-            <button mat-stroked-button color="primary" (click)="openCalendarDialog()">
-              <mat-icon>calendar_today</mat-icon>
-              Select range
-            </button>
-          </div>
+<!--          &lt;!&ndash; Botón calendario Angular Material &ndash;&gt;-->
+<!--          <div style="display: flex; justify-content: flex-end;">-->
+<!--            <button mat-stroked-button color="primary" (click)="openCalendarDialog()">-->
+<!--              <mat-icon>calendar_today</mat-icon>-->
+<!--              Select range-->
+<!--            </button>-->
+<!--          </div>-->
 
         </div>
       </div>
@@ -49,13 +49,13 @@
             </mat-select>
           </mat-form-field>
 
-          <!-- Botón calendario Angular Material -->
-          <div style="display: flex; justify-content: flex-end;">
-            <button mat-stroked-button color="primary" (click)="openCalendarDialog()">
-              <mat-icon>calendar_today</mat-icon>
-              Select range
-            </button>
-          </div>
+<!--          &lt;!&ndash; Botón calendario Angular Material &ndash;&gt;-->
+<!--          <div style="display: flex; justify-content: flex-end;">-->
+<!--            <button mat-stroked-button color="primary" (click)="openCalendarDialog()">-->
+<!--              <mat-icon>calendar_today</mat-icon>-->
+<!--              Select range-->
+<!--            </button>-->
+<!--          </div>-->
 
         </div>
       </div>
@@ -78,25 +78,23 @@
             </mat-button-toggle>
           </mat-button-toggle-group>
 
-          <!-- Botón para abrir modal de calendario -->
-          <div style="display: flex; justify-content: flex-end;">
-            <button mat-icon-button color="primary" (click)="openCalendarDialog()" aria-label="Open calendar">
-              <mat-icon>calendar_today</mat-icon>
-            </button>
-          </div>
+<!--          &lt;!&ndash; Botón para abrir modal de calendario &ndash;&gt;-->
+<!--          <div style="display: flex; justify-content: flex-end;">-->
+<!--            <button mat-icon-button color="primary" (click)="openCalendarDialog()" aria-label="Open calendar">-->
+<!--              <mat-icon>calendar_today</mat-icon>-->
+<!--            </button>-->
+<!--          </div>-->
         </div>
 
-        <!-- CHART -->
-        <div class="chart-container" style="flex-grow: 1; margin-top: 1rem;">
-          <p-chart
-            type="line"
-            [data]="pChartData"
-            [options]="pChartOptions"
-            style="height: 20rem; width: 100%;">
-          </p-chart>
-
-
-        </div>
+<!--        &lt;!&ndash; CHART &ndash;&gt;-->
+<!--        <div class="chart-container" style="flex-grow: 1; margin-top: 1rem;">-->
+<!--          <p-chart-->
+<!--            type="line"-->
+<!--            [data]="pChartData"-->
+<!--            [options]="pChartOptions"-->
+<!--            style="height: 20rem; width: 100%;">-->
+<!--          </p-chart>-->
+<!--        </div>-->
       </div>
     </mat-tab>
   </mat-tab-group>
