--- a/src/app/Restock/resource/inventory/components/inventory-table/inventory-table.component.css
+++ b/src/app/Restock/resource/inventory/components/inventory-table/inventory-table.component.css
@@ -123,3 +123,25 @@
 .inline-paginator {
   background-color: white;
 }
+
+@media (max-width: 768px) {
+  .toolbar {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .search-container {
+    max-width: none;
+    width: 100%;
+  }
+
+  .inline-paginator {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  mat-table {
+    overflow-x: auto;
+    display: block;
+  }
+}
