--- a/src/app/Restock/resource/inventory/components/supply-carousel/supply-carousel.component.css
+++ b/src/app/Restock/resource/inventory/components/supply-carousel/supply-carousel.component.css
@@ -70,3 +70,12 @@
 .nav-button.right {
   right: 0;
 }
+@media (max-width: 768px) {
+  .supply-card {
+    min-width: 150px;
+  }
+
+  .nav-button {
+    display: none;
+  }
+}
