--- a/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/order-details/order-details-modal.component.html
@@ -196,7 +196,7 @@
                     }}:</strong
                   >
                   {{
-                    supplyRelation.batch?.supply?.unit_measurement?.name ||
+                    supplyRelation.batch?.supply?.unit_abbreviation ||
                       ("common.notDefined" | translate)
                   }}
                 </p>
